fixed the gallery margin on index3.html as well as the image spacing for the tour dates; looking to move onto the media downloads

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,11 @@ p {
 h1,
 h2,
 h3,
-h4 {
+h4,
+h5,
+h6,
+h7,
+h8 {
     font-family: 'Dokdo', cursive;
 }
 
@@ -103,6 +107,7 @@ h4 {
 
 nav{
     z-index: 1000;
+    background-color: white;
 }
 
 
@@ -141,26 +146,35 @@ nav{
     background-color: #f6e255;
     text-align: center;
     opacity: 0.7;
-    padding: 0 15px
+    padding-bottom: 30px;
 }
 
+.row{
+    margin-right: 0;
+}
 
 
 .image-container {
     opacity: 1;
     display: inline;
     margin-top: 15px;
-    padding: 0px 15px 0px 15px;
-    height: 200px;
-    width: 200px
+    margin-left: auto;
+    margin-right: auto;
+    height: 180px;
+    width: 180px
+    
 }
 
 
 .image-container img {
 
     border: 3px solid red;
-    height: 180px;
-    width: 180px;
+    height: 100%;
+    width: 100%;
+    min-height: 100px;
+    min-width: 100px;
+    max-height: 180px;
+    max-width: 180px;
 
 }
 
@@ -171,6 +185,7 @@ nav{
 .tourdates-content {
     background-color: green;
     opacity: 0.7;
+    margin: auto;
 }
 
 .tourdate-item {
@@ -180,8 +195,10 @@ nav{
 }
 
 .tourdate {
-    margin-left: 50px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 40px;
+    width: 50px;
 
 }
 
@@ -231,6 +248,7 @@ nav{
 
 .tourdate-image{
     margin-left: 50px;
+    max-width: 100%;
 }
 
 .tourdate-image img {
@@ -238,15 +256,15 @@ nav{
     width: 80%;
     border-radius: 50%;
     border: red 5px solid;
-    max-height: 310px;
-    max-width: 520px;
+    max-width: 515px;
+ 
 }
 
 
 
 
 
-@media screen and (max-width: 412px) {
+@media screen and (max-width: 767px) {
   #tourimage { display: none; }   /* hide it elsewhere */
 }
 
@@ -256,7 +274,47 @@ nav{
 
 .media-container{
     background-color: #73b5fc;
-    height: 100vh;
+    padding-bottom: 40px;
+}
+
+.media-heading{
+    text-align: center;
+    margin-bottom: 0;
+}
+
+
+.media-content a{
+    color: red;
+    font-family: 'Gloria Hallelujah', cursive;
+}
+
+.audio-content{
+    
+    
+}
+
+.video-content{
+    text-align: center;
+}
+
+.song-list{
+}
+
+.song-item{
+    text-align: center;
+    list-style-type: none;
+}
+
+.song-item a{
+    text-decoration: none;
+}
+
+.social-media{
+    margin-top: 20px;
+}
+
+.social-meda-link{
+     display: inline;   
 }
 
 
